API/Litecad.h


BOOL    LCAPI lcPropPutInt    (HANDLE hObject, int idProp, int Value);

BOOL    LCAPI lcPropPutFloat  (HANDLE hObject, int idProp, double Value);

BOOL    LCAPI lcPropPutStr    (HANDLE hObject, int idProp, LPCWSTR szValue);

BOOL    LCAPI lcPropPutHandle (HANDLE hObject, int idProp, HANDLE hValue);


// Drawing 
HANDLE LCAPI lcCreateDrawing      ();

BOOL   LCAPI lcDeleteDrawing      (HANDLE hDrw);

BOOL   LCAPI lcDrwNew             (HANDLE hDrw, LPCWSTR szFileName, HANDLE hLcWnd);

BOOL   LCAPI lcDrwNewT            (HANDLE hDrw, LPCWSTR szFileName, LPCWSTR szTemplate, HANDLE hLcWnd);

BOOL   LCAPI lcDrwLoad            (HANDLE hDrw, LPCWSTR szFileName, HWND hWnd, HANDLE hLcWnd);

BOOL   LCAPI lcDrwSave            (HANDLE hDrw, LPCWSTR szFileName, BOOL bBak, HWND hWnd);
 
BOOL   LCAPI lcDrwPurge           (HANDLE hDrw);
 
BOOL   LCAPI lcDrwRegenViews      (HANDLE hDrw, HANDLE hEnt);

BOOL   LCAPI lcDrwSortObjects     (HANDLE hDrw, int ObjType);

BOOL   LCAPI lcDrwClearXData      (HANDLE hDrw, int ObjType, int Mode);

BOOL   LCAPI lcDrwResolveBlocks   (HANDLE hDrw, WCHAR* szError);  // undoc

HANDLE LCAPI lcDrwAddLayer        (HANDLE hDrw, LPCWSTR szName, LPCWSTR szColor, HANDLE hLtype, int Lweight);

HANDLE LCAPI lcDrwAddLinetype     (HANDLE hDrw, LPCWSTR szName, LPCWSTR szDefinition);

HANDLE LCAPI lcDrwAddLinetypeF    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, LPCWSTR szLtypeName);

HANDLE LCAPI lcDrwAddTextStyle    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFontName);

HANDLE LCAPI lcDrwAddDimStyle     (HANDLE hDrw, LPCWSTR szName);

HANDLE LCAPI lcDrwAddImage        (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName);

HANDLE LCAPI lcDrwAddBlock        (HANDLE hDrw, LPCWSTR szName, double X, double Y);

HANDLE LCAPI lcDrwAddBlockFromFile (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, int Overwrite, HWND hwParent);
 
HANDLE LCAPI lcDrwAddBlockFromDrw (HANDLE hDrw, LPCWSTR szName, HANDLE hDrw2, int Overwrite, HWND hwParent);

HANDLE LCAPI lcDrwAddBlockFile    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, int Overwrite, HWND hwParent);

HANDLE LCAPI lcDrwAddViewPaper    (HANDLE hDrw, LPCWSTR szName, int PaperSize, int Orient, double Width, double Height);


BOOL   LCAPI lcDrwDeleteObject    (HANDLE hDrw, HANDLE hObject);

HANDLE LCAPI lcDrwGetFirstObject  (HANDLE hDrw, int ObjType);

HANDLE LCAPI lcDrwGetNextObject   (HANDLE hDrw, HANDLE hObject);

HANDLE LCAPI lcDrwGetObjectByID   (HANDLE hDrw, int ObjType, int Id);

HANDLE LCAPI lcDrwGetObjectByIDH  (HANDLE hDrw, int ObjType, LPCWSTR szId);

HANDLE LCAPI lcDrwGetObjectByName (HANDLE hDrw, int ObjType, LPCWSTR szName);

int    LCAPI lcDrwCountObjects    (HANDLE hDrw, int ObjType);

HANDLE LCAPI lcDrwGetViewByBlock  (HANDLE hDrw, HANDLE hBlock);

HANDLE LCAPI lcDrwGetEntByID      (HANDLE hDrw, int Id);

HANDLE LCAPI lcDrwGetEntByIDH     (HANDLE hDrw, LPCWSTR szId);

HANDLE LCAPI lcDrwGetEntByKey     (HANDLE hDrw, int Key);


// View
BOOL   LCAPI lcViewSetRect        (HANDLE hView, double Xcen, double Ycen, double Width, double Height);

BOOL   LCAPI lcViewSetRect2       (HANDLE hView, double Lef, double Bot, double Rig, double Top);

BOOL   LCAPI lcViewSetLimits      (HANDLE hView, double Xmin, double Ymin, double Xmax, double Ymax);  // undoc
BOOL   LCAPI lcViewSetGrid        (HANDLE hView, double X0, double Y0, double dX, double dY);

BOOL   LCAPI lcViewRegen          (HANDLE hView, HANDLE hEnt);

BOOL   LCAPI lcViewSetPaperSize   (HANDLE hView, int PaperSize, int Orient, double Width, double Height);

HANDLE LCAPI lcViewGetEntByPoint  (HANDLE hView, double X, double Y, double Delta, int Mode);

int    LCAPI lcViewGetEntsByRect  (HANDLE hView, double Lef, double Bot, double Rig, double Top, BOOL bCross, int MaxNum);

HANDLE LCAPI lcViewGetEntity      (int iEnt);


BOOL   LCAPI lcViewRasterize      (HANDLE hView, LPCWSTR szFileName, double Lef, double Bot, double Rig, double Top, double Scale);

BOOL   LCAPI lcViewDrawMarker     (HANDLE hView, double X, double Y);   // !!! undoc
BOOL   LCAPI lcViewDrawLine       (HANDLE hView, double X0, double Y0, double X1, double Y1);  // !!! undoc
BOOL   LCAPI lcViewDrawXline      (HANDLE hView, double X0, double Y0, double X1, double Y1, BOOL bRay);  // !!! undoc
BOOL   LCAPI lcViewDrawRect       (HANDLE hView, double X0, double Y0, double X1, double Y1);  // !!! undoc

// Add graphic objects into a block
BOOL   LCAPI lcBlockClear       (HANDLE hBlock, HANDLE hLayer);

BOOL   LCAPI lcBlockPurge       (HANDLE hBlock);

BOOL   LCAPI lcBlockSortEnts    (HANDLE hBlock);

HANDLE LCAPI lcBlockAddPoint    (HANDLE hBlock, double X, double Y);

HANDLE LCAPI lcBlockAddPoint2   (HANDLE hBlock, double X, double Y, int PtMode, double PtSize);

HANDLE LCAPI lcBlockAddXline    (HANDLE hBlock, double X, double Y, double Angle, BOOL bRay);

HANDLE LCAPI lcBlockAddXline2P  (HANDLE hBlock, double X, double Y, double X2, double Y2, BOOL bRay);