Samples/VCS/Test1/Litecad.cs


  [DllImport("litecad.dll", EntryPoint="lcPropPutInt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PropPutInt(int hObject, int idProp, int Value);

  [DllImport("litecad.dll", EntryPoint="lcPropPutFloat", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PropPutFloat(int hObject, int idProp, double Value);

  [DllImport("litecad.dll", EntryPoint="lcPropPutStr", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PropPutStr(int hObject, int idProp, string szValue);

  [DllImport("litecad.dll", EntryPoint="lcPropPutHandle", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PropPutHandle(int hObject, int idProp, int hValue);

  [DllImport("litecad.dll", EntryPoint="lcCreateDrawing", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int CreateDrawing();

  [DllImport("litecad.dll", EntryPoint="lcDeleteDrawing", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DeleteDrawing(int hDrw);

  [DllImport("litecad.dll", EntryPoint="lcDrwNew", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwNew(int hDrw, string szFileName, int hLcWnd);

  [DllImport("litecad.dll", EntryPoint="lcDrwNewT", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwNewT(int hDrw, string szFileName, string szTemplate, int hLcWnd);

  [DllImport("litecad.dll", EntryPoint="lcDrwLoad", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwLoad(int hDrw, string szFileName, IntPtr hWnd, int hLcWnd);

  [DllImport("litecad.dll", EntryPoint="lcDrwSave", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwSave(int hDrw, string szFileName, bool bBak, IntPtr hWnd);

  [DllImport("litecad.dll", EntryPoint="lcDrwPurge", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwPurge(int hDrw);

  [DllImport("litecad.dll", EntryPoint="lcDrwRegenViews", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwRegenViews(int hDrw, int hEnt);

  [DllImport("litecad.dll", EntryPoint="lcDrwSortObjects", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwSortObjects(int hDrw, int ObjType);

  [DllImport("litecad.dll", EntryPoint="lcDrwClearXData", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwClearXData(int hDrw, int ObjType, int Mode);

  [DllImport("litecad.dll", EntryPoint="lcDrwResolveBlocks", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwResolveBlocks(int hDrw, out IntPtr szError);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddLayer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddLayer(int hDrw, string szName, string szColor, int hLtype, int Lweight);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddLinetype", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddLinetype(int hDrw, string szName, string szDefinition);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddLinetypeF", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddLinetypeF(int hDrw, string szName, string szFileName, string szLtypeName);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddTextStyle", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddTextStyle(int hDrw, string szName, string szFontName);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddDimStyle", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddDimStyle(int hDrw, string szName);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddImage", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddImage(int hDrw, string szName, string szFileName);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddBlock", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddBlock(int hDrw, string szName, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddBlockFromFile", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddBlockFromFile(int hDrw, string szName, string szFileName, int Overwrite, IntPtr hwParent);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddBlockFromDrw", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddBlockFromDrw(int hDrw, string szName, int hDrw2, int Overwrite, IntPtr hwParent);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddBlockFile", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddBlockFile(int hDrw, string szName, string szFileName, int Overwrite, IntPtr hwParent);

  [DllImport("litecad.dll", EntryPoint="lcDrwAddViewPaper", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwAddViewPaper(int hDrw, string szName, int PaperSize, int Orient, double Width, double Height);

  [DllImport("litecad.dll", EntryPoint="lcDrwDeleteObject", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DrwDeleteObject(int hDrw, int hObject);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetFirstObject", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetFirstObject(int hDrw, int ObjType);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetNextObject", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetNextObject(int hDrw, int hObject);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetObjectByID", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetObjectByID(int hDrw, int ObjType, int Id);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetObjectByIDH", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetObjectByIDH(int hDrw, int ObjType, string szId);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetObjectByName", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetObjectByName(int hDrw, int ObjType, string szName);

  [DllImport("litecad.dll", EntryPoint="lcDrwCountObjects", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwCountObjects(int hDrw, int ObjType);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetViewByBlock", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetViewByBlock(int hDrw, int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetEntByID", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetEntByID(int hDrw, int Id);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetEntByIDH", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetEntByIDH(int hDrw, string szId);

  [DllImport("litecad.dll", EntryPoint="lcDrwGetEntByKey", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int DrwGetEntByKey(int hDrw, int Key);

  [DllImport("litecad.dll", EntryPoint="lcViewSetRect", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewSetRect(int hView, double Xcen, double Ycen, double Width, double Height);

  [DllImport("litecad.dll", EntryPoint="lcViewSetRect2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewSetRect2(int hView, double Lef, double Bot, double Rig, double Top);

  [DllImport("litecad.dll", EntryPoint="lcViewSetLimits", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewSetLimits(int hView, double Xmin, double Ymin, double Xmax, double Ymax);

  [DllImport("litecad.dll", EntryPoint="lcViewSetGrid", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewSetGrid(int hView, double X0, double Y0, double dX, double dY);

  [DllImport("litecad.dll", EntryPoint="lcViewRegen", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewRegen(int hView, int hEnt);

  [DllImport("litecad.dll", EntryPoint="lcViewSetPaperSize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewSetPaperSize(int hView, int PaperSize, int Orient, double Width, double Height);

  [DllImport("litecad.dll", EntryPoint="lcViewGetEntByPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ViewGetEntByPoint(int hView, double Xview, double Yview, bool bOnlyFilled);

  [DllImport("litecad.dll", EntryPoint="lcViewGetEntByRect", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ViewGetEntByRect(int hView, double Lef, double Bot, double Rig, double Top);

  [DllImport("litecad.dll", EntryPoint="lcViewGetEntsByPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ViewGetEntsByPoint(int hView, double Xview, double Yview, bool bOnlyFilled);

  [DllImport("litecad.dll", EntryPoint="lcViewGetEntsByRect", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ViewGetEntsByRect(int hView, double Lef, double Bot, double Rig, double Top, bool bCross);

  [DllImport("litecad.dll", EntryPoint="lcViewGetEntity", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ViewGetEntity(int iEnt);

  [DllImport("litecad.dll", EntryPoint="lcViewRasterize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewRasterize(int hView, string szFileName, double Lef, double Bot, double Rig, double Top, double Scale);

  [DllImport("litecad.dll", EntryPoint="lcViewDrawMarker", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewDrawMarker(int hView, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcViewDrawLine", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewDrawLine(int hView, double X0, double Y0, double X1, double Y1);

  [DllImport("litecad.dll", EntryPoint="lcViewDrawXline", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewDrawXline(int hView, double X0, double Y0, double X1, double Y1, bool bRay);

  [DllImport("litecad.dll", EntryPoint="lcViewDrawRect", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ViewDrawRect(int hView, double X0, double Y0, double X1, double Y1);

  [DllImport("litecad.dll", EntryPoint="lcBlockClear", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockClear(int hBlock, int hLayer);

  [DllImport("litecad.dll", EntryPoint="lcBlockPurge", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockPurge(int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcBlockSortEnts", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockSortEnts(int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddPoint(int hBlock, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddPoint2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddPoint2(int hBlock, double X, double Y, int PtMode, double PtSize);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddXline", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddXline(int hBlock, double X, double Y, double Angle, bool bRay);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddXline2P", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddXline2P(int hBlock, double X, double Y, double X2, double Y2, bool bRay);
